--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                                     <table class="table table-bordered table-condensed">
                                                         <tbody>
                                                             <tr>
-                                                                <td>Transaction Fare</td>
+                                                                <td>Transaction Fee</td>
                                                                 <td>N 23,000</td>
                                                             </tr>
                                                             <tr>
